--- a/cmake/dependencies/CMakeLists.txt
+++ b/cmake/dependencies/CMakeLists.txt
@@ -46,14 +46,41 @@ if(BUILD_absl)
   set(ABSL_USE_SYSTEM_INCLUDES ON)
   # We want Abseil to declare what C++ standard it was compiled with.
   set(ABSL_PROPAGATE_CXX_STD ON)
+  set(ABSL_BUILD_TEST_HELPERS ON)
+  set(ABSL_USE_EXTERNAL_GOOGLETEST ON)
+  set(ABSL_FIND_GOOGLETEST OFF)
   # We want Abseil to keep the INSTALL rules enabled, even though it is a
   # subproject. Otherwise the install rules in this project break.
   set(ABSL_ENABLE_INSTALL ON)
   set(ABSL_BUILD_TESTING OFF)
-  set(ABSL_BUILD_TEST_HELPERS OFF)
-  set(ABSL_USE_EXTERNAL_GOOGLETEST ON)
-  set(ABSL_FIND_GOOGLETEST OFF)
   FetchContent_MakeAvailable(absl)
+  list(POP_BACK CMAKE_MESSAGE_INDENT)
+  message(CHECK_PASS "fetched")
+endif()
+
+# ##############################################################################
+# Protobuf
+# ##############################################################################
+if(BUILD_Protobuf)
+  message(CHECK_START "Fetching Protobuf")
+  list(APPEND CMAKE_MESSAGE_INDENT "  ")
+  FetchContent_Declare(
+    Protobuf
+    GIT_REPOSITORY "https://github.com/protocolbuffers/protobuf.git"
+    GIT_TAG "v33.1"
+    GIT_SHALLOW TRUE
+    GIT_SUBMODULES ""
+    UPDATE_COMMAND git reset --hard
+    PATCH_COMMAND git apply --ignore-whitespace
+    "${CMAKE_CURRENT_LIST_DIR}/../../patches/protobuf-v33.1.patch"
+    OVERRIDE_FIND_PACKAGE # Make package visible for "protobuf-matchers" below
+  )
+  set(protobuf_BUILD_TESTS OFF)
+  set(protobuf_BUILD_SHARED_LIBS ON)
+  set(protobuf_BUILD_EXPORT OFF)
+  set(protobuf_MSVC_STATIC_RUNTIME OFF)
+  #set(protobuf_BUILD_LIBUPB ON)
+  FetchContent_MakeAvailable(Protobuf)
   list(POP_BACK CMAKE_MESSAGE_INDENT)
   message(CHECK_PASS "fetched")
 endif()
@@ -79,31 +106,6 @@ if(BUILD_re2)
   message(CHECK_PASS "fetched")
 endif()
 
-# ##############################################################################
-# Protobuf
-# ##############################################################################
-if(BUILD_Protobuf)
-  message(CHECK_START "Fetching Protobuf")
-  list(APPEND CMAKE_MESSAGE_INDENT "  ")
-  FetchContent_Declare(
-    Protobuf
-    GIT_REPOSITORY "https://github.com/protocolbuffers/protobuf.git"
-    GIT_TAG "v33.0"
-    GIT_SHALLOW TRUE
-    GIT_SUBMODULES ""
-    UPDATE_COMMAND git reset --hard
-    PATCH_COMMAND git apply --ignore-whitespace
-    "${CMAKE_CURRENT_LIST_DIR}/../../patches/protobuf-v33.0.patch"
-  )
-  set(protobuf_BUILD_TESTS OFF)
-  set(protobuf_BUILD_SHARED_LIBS ON)
-  set(protobuf_BUILD_EXPORT OFF)
-  set(protobuf_MSVC_STATIC_RUNTIME OFF)
-  #set(protobuf_BUILD_LIBUPB ON)
-  FetchContent_MakeAvailable(Protobuf)
-  list(POP_BACK CMAKE_MESSAGE_INDENT)
-  message(CHECK_PASS "fetched")
-endif()
 
 ###############
 ##  TESTING  ##
